# DinnerGroupTask

./: .gitignore  CMakeLists.txt  README.md
include/: Customer.h  Dish.h  Kitchen.h  defines.h  restaurant.h  tables.h
src/: Customer.c  Dish.c  Kitchen.c  main.c  restaurant.c  tables.c
